@@ -20,24 +20,25 @@
                 <!-- About me -->
                 <div align="center" id="about">
                     <p style="display: inline-block; font-size: 20px;">&#10021;&nbsp;&nbsp;</p>
-                    <h5 class="spacing_medium" style="display: inline-block;">My Background</h5>
-                    <p style="display: inline-block; font-size: 20px;">&nbsp;&nbsp;&#10021;</p>
+                    <h5 style="display: inline-block; letter-spacing: 2px;">My Background</h5>
+                    <p style="display: inline-block; padding-top: 70px; font-size: 20px;">&nbsp;&nbsp;&#10021;</p>
                     
                     <p style="padding-bottom: 40px;">Hello there! Welcome to my web site. The web site showcases some of my projects that I have created and shared on GitHub.</p>
                     <p align="justify">
-                        As for me, I am an undergraduate Computer Science student. I hope to be able to become a developer one day. The language that I mainly use is 
-                        Java though I am also experimenting working with other languages such as Python and JavaScript. I mostly work with Java applications that emphasized more
-                        towards the backend of development. Right now, I am working on my web-developing skills. I feel that being able to effectively present one's work is as important 
-                        as developing it. What good is spending hours developing an application if one does not share it? So I hope that you have a fun experience browsing 
-                        through the web site and checking out some of the projects that I have been working on!
+                        I am an undergraduate Computer Science student who is hoping to be able to become a developer one day. I am currently building 
+                        this web site and the projects that it features as a hobby to help me practice and expand my skills as a programmer by making something 
+                        fun along the process. I feel that being able to effectively present and document one's work is as important as developing it. The language 
+                        that I am most proficient at is Java although I am also learning other languages such as Python and JavaScript. I hope that you have a fun 
+                        experience browsing through the web site and checking out some of the projects that I have been working on!
                     </p>
+                    
                 </div>
                 <!-- Contact -->
                 <div align="center" id="contact">
                     <p style="display: inline-block; font-size: 20px;">&#10021;&nbsp;&nbsp;</p>
-                    <h5 style="display: inline-block;">Contact</h5>
+                    <h5 style="display: inline-block; letter-spacing: 2px;">Contact</h5>
                     <p style="display: inline-block; font-size: 20px;">&nbsp;&nbsp;&#10021;</p>
-                    <p>If you have any questions, feel free to contact me via email.</p>
+                    <p>I am also accepting comments and criticism on how to improve my work, or if you have any questions, feel free to send me an email!</p>
                     <p>Email: diane.m.truong@gmail.com</p>
                 </div>
             </div>
