@@ -27,7 +27,7 @@ h1 { margin: 0; padding: 0; font-family: Georgia, "Times New Roman", Times, seri
 h2 { margin: 0; padding: 0; text-align: center; font-family: 'Quicksand', sans-serif; font-size: 25px; font-style: normal; line-height: normal; text-transform: uppercase; }
 h3 { margin: 0; padding: 0; font-family: 'Raleway', sans-serif; font-size: 16px; font-style: normal; line-height: normal; text-transform: uppercase; } 
 h4 { margin: 0; padding: 0; text-align: center; font-family: 'Josefin Sans', sans-serif; font-size: 23px; font-style: normal; line-height: normal; }
-h5 { margin: 0; padding: 0; text-align: center; font-family: 'Poiret One', cursive; font-size: 20px; font-style: oblique; font-weight: 500; line-height: normal; text-decoration: underline; }
+h5 { margin: 0; padding: 0; text-align: center; font-family: 'Poiret One', cursive; font-size: 20px; font-style: oblique; border-bottom: 1px solid #ffffff; padding-bottom: 0.5px; line-height: normal;  }
 p { font-size: 15px; }
 p_small { line-height: 50%; font-size: 15px; }
 .read_more { text-align: right; color: #000000; font-size: smaller; font-weight: bold; }
