@@ -1,3 +1,6 @@
+07/14/17
+- Minor changes to contact.html
+
 07/11/17
 - Split layout.css into default.css and custom.css
 
